[metadata]
name=pypowsybl
version = attr: pypowsybl.__version__
author=Geoffroy Jamgotchian
author_email=geoffroy.jamgotchian@gmail.com
description=A PowSyBl Python API
long_description=file: README.md
long_description_content_type=text/markdown
url=https://github.com/powsybl/pypowsybl
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
;    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    prettytable>=2.0.0
    pandas>=2.2.2; python_version >= "3.9"
    pandas>=2.0.3; python_version <= "3.8"
    networkx

[options.extras_require]
pandapower =
    pandapower>=2.4.11

[options.package_data]
pypowsybl: py.typed, *.pyi
